scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/operators/bedrock-egress-egress-create-postgres-license-config.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-create-postgres-license-config
  namespace: "opNamespace"
  labels:
    component: cpfs3
    service: edb
spec:
  podSelector:
    matchLabels:
      job-name: "create-postgres-license-config"
  egress:
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
      to:
        - podSelector:
            matchLabels:
              apiserver: 'true'
          namespaceSelector: {}
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      - port: 5353
        protocol: UDP
      - port: 5353
        protocol: TCP
      to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            dns.operator.openshift.io/daemonset-dns: default
  policyTypes:
    - Egress
