scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/operators/bedrock-egress-ibm-bts-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ibm-bts-operator
  namespace: "opNamespace"
  labels:
    component: cpfs3
    service: bts
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          apiserver: "true"
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    - port: 5353
      protocol: UDP
    - port: 5353
      protocol: TCP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "ibm-bts-operator"
  policyTypes:
  - Egress
