scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/operators/bedrock-egress-ibm-iam-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ibm-iam-operator
  namespace: "opNamespace"
  labels:
    component: cpfs3
    service: iam
spec:
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchExpressions:
          - key: k8s.enterprisedb.io/cluster
            operator: Exists
  - to:
    - namespaceSelector: {}
      podSelector:
        matchExpressions:
          - key: pg.ibm.com/cluster
            operator: Exists
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: "platform-identity-provider"
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: icp-mongodb
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          apiserver: "true"
  - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      - port: 5353
        protocol: UDP
      - port: 5353
        protocol: TCP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default  
  podSelector:
    matchLabels:
      name: "ibm-iam-operator"
  policyTypes:
  - Egress
