scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/operators/bedrock-egress-ibm-postgres-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ibm-postgres-operator
  namespace: "opNamespace"
  labels:
    component: cpfs3
    service: ibm-pg
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ibm-pg-operator
  egress:
    - to:
        - podSelector:
            matchExpressions:
              - key: pg.ibm.com/cluster
                operator: Exists
          namespaceSelector: {}
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
      to:
        - podSelector:
            matchLabels:
              apiserver: 'true'
          namespaceSelector: {}
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      - port: 5353
        protocol: UDP
      - port: 5353
        protocol: TCP
      to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            dns.operator.openshift.io/daemonset-dns: default
  policyTypes:
    - Egress
