scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/operators/cpd-egress-ibm-cpd-platform-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-cpd-platform-operator
  namespace: "opNamespace"
  labels:
    component: cpfs3
    service: cpd-platform
spec:
  podSelector:
    matchLabels:
      control-plane: cpd
  policyTypes:
  - Egress
  egress:
  - {}
