scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/operators/zen-egress-ibm-zen-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ibm-zen-operator
  namespace: "opNamespace"
  labels:
    component: cpfs3
    service: zen
spec:
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          component: "zen-minio"
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          component: "zen-core-api"
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          apiserver: "true"
  - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      - port: 5353
        protocol: UDP
      - port: 5353
        protocol: TCP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default  
  podSelector:
    matchLabels:
      name: "ibm-zen-operator"
  policyTypes:
  - Egress
